--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,12 @@ span img#sq-icon{
  margin: 120px auto 150px auto;  
  }
 
+@media screen and (min-width: 992px){
+  .middleblock}
+  margin: 250px auto 300px auto;
+ }
+}
+
 #sq-icon{
   width: 2%;
   vertical-align: middle;
