--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ span img#sq-icon{
  }
 
 @media screen and (min-width: 992px){
-  .middleblock}
+  .middleblock{
   margin: 250px auto 300px auto;
  }
 }
