--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ span img#sq-icon{
  margin: 120px auto 150px auto;  
  }
 
-@media screen and (max-width: 992px){
+@media screen and (min-width: 992px){
   .middleblock{
   margin: 250px auto 300px auto;
   }
@@ -67,6 +67,12 @@ span img#sq-icon{
   vertical-align: middle;
   margin-bottom: 3px;
   opacity: 0.8; 
+}
+
+@media screen and (min-width: 992px){
+  #sq-icon{
+  width: 1%;
+  }
 }
 
 
