--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,11 @@ span img#sq-icon{
  margin: 120px auto 150px auto;  
  }
 
+@media screen and (min-width: 992px){
+    .middleblock{
+    margin: 250px auto 270px auto;
+    }
+  }
 
 #sq-icon{
   width: 2%;
