--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ span img#sq-icon{
     }
   }
 
-@media screen and (min-width: 1750px){
+@media screen and (max-width: 1750px){
   .middleblock{
     margin: 215px auto 305px auto;
   }
